unpackaged/main/default/objects/Fraccionamiento__c/Fraccionamiento__c.object-meta.xml
<CustomObject>
    <label>Fraccionamiento</label>
    <nameField>
        <label>Nombre de Fraccionamiento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fraccionamientos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>