unpackaged/main/default/objects/Fraccionamiento__c/fields/Activo_frac__c.field-meta.xml
<CustomField>
    <fullName>Activo_frac__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>