unpackaged/main/default/objects/Fraccionamiento__c/fields/Codigo_Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Fraccionamiento__c</fullName>
    <externalId>true</externalId>
    <label>Código Fraccionamiento</label>
    <length>10</length>
    <type>Text</type>
</CustomField>