unpackaged/main/default/objects/Fraccionamiento__c/fields/Compania_Asociada__c.field-meta.xml
<CustomField>
    <fullName>Compania_Asociada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Este campo se utiliza para ligar el fraccionamiento con una compañía de Javer y asi presentar el aviso de privacidad correspondiente</inlineHelpText>
    <label>Compañía Javer Asociada</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeName__c</field>
            <operation>contains</operation>
            <value>COMPAÑ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fraccionamientos</relationshipLabel>
    <relationshipName>Fraccionamientos</relationshipName>
    <type>Lookup</type>
</CustomField>