unpackaged/main/default/objects/Fraccionamiento__c/fields/Compania_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Compania_Nombre__c</fullName>
    <label>Compañia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>