unpackaged/main/default/objects/Fraccionamiento__c/fields/Coordenadas__c.field-meta.xml
<CustomField>
    <fullName>Coordenadas__c</fullName>
    <label>Coordenadas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>