unpackaged/main/default/objects/Fraccionamiento__c/fields/Dias_Previos_Vencimiento_Asesor_Notif__c.field-meta.xml
<CustomField>
    <fullName>Dias_Previos_Vencimiento_Asesor_Notif__c</fullName>
    <label>Días Previos Vencimiento Asesor Notif</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>