unpackaged/main/default/objects/Fraccionamiento__c/fields/Estado_fracc__c.field-meta.xml
<CustomField>
    <fullName>Estado_fracc__c</fullName>
    <label>Estado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>