unpackaged/main/default/objects/Fraccionamiento__c/fields/Fechterm_fracc__c.field-meta.xml
<CustomField>
    <fullName>Fechterm_fracc__c</fullName>
    <label>Fecha de Término de Proyecto</label>
    <type>Date</type>
</CustomField>