unpackaged/main/default/objects/Fraccionamiento__c/fields/Gestor_Inactivo__c.field-meta.xml
<CustomField>
    <fullName>Gestor_Inactivo__c</fullName>
    <formula>IF( Residente4__r.IsActive == false, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gestor Inactivo</label>
    <type>Checkbox</type>
</CustomField>