unpackaged/main/default/objects/Fraccionamiento__c/fields/Id_Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Id_Fraccionamiento__c</fullName>
    <externalId>true</externalId>
    <label>Id Fraccionamiento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>