unpackaged/main/default/objects/Fraccionamiento__c/fields/Id_Plaza__c.field-meta.xml
<CustomField>
    <fullName>Id_Plaza__c</fullName>
    <label>Id Plaza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>