unpackaged/main/default/objects/Fraccionamiento__c/fields/Jefe_ATC_Inactivo__c.field-meta.xml
<CustomField>
    <fullName>Jefe_ATC_Inactivo__c</fullName>
    <formula>IF(  Jefe_Atencion_Clientes__r.IsActive == false, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jefe ATC Inactivo</label>
    <type>Checkbox</type>
</CustomField>