unpackaged/main/default/objects/Fraccionamiento__c/fields/Jefe_Atencion_Clientes__c.field-meta.xml
<CustomField>
    <fullName>Jefe_Atencion_Clientes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jefe de Atención a Clientes</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fraccionamientos6</relationshipName>
    <type>Lookup</type>
</CustomField>