unpackaged/main/default/objects/Fraccionamiento__c/fields/LigaLogoFracc__c.field-meta.xml
<CustomField>
    <fullName>LigaLogoFracc__c</fullName>
    <label>Liga Logo Fracc</label>
    <type>Url</type>
</CustomField>