unpackaged/main/default/objects/Fraccionamiento__c/fields/Muni_fracc__c.field-meta.xml
<CustomField>
    <fullName>Muni_fracc__c</fullName>
    <label>Municipio</label>
    <length>200</length>
    <type>Text</type>
</CustomField>