unpackaged/main/default/objects/Fraccionamiento__c/fields/Nounid_fracc__c.field-meta.xml
<CustomField>
    <fullName>Nounid_fracc__c</fullName>
    <label>No. de Unidades</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>