unpackaged/main/default/objects/Fraccionamiento__c/fields/Parametro_para_el_Calculo_de_Sobreprecio__c.field-meta.xml
<CustomField>
    <fullName>Parametro_para_el_Calculo_de_Sobreprecio__c</fullName>
    <label>Parámetro para el Cálculo de Sobreprecio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Precio Presupuesto</fullName>
                <default>true</default>
                <label>Precio Presupuesto</label>
            </value>
            <value>
                <fullName>Precio Mínimo de Venta</fullName>
            </value>
            <value>
                <fullName>Precio Unitario</fullName>
            </value>
            <value>
                <fullName>Precio Minimo Solicitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>