unpackaged/main/default/objects/Fraccionamiento__c/fields/Plaza__c.field-meta.xml
<CustomField>
    <fullName>Plaza__c</fullName>
    <label>Plaza</label>
    <type>TextArea</type>
</CustomField>