unpackaged/main/default/objects/Fraccionamiento__c/fields/Plaza_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Plaza_Relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plaza</label>
    <referenceTo>Plaza__c</referenceTo>
    <relationshipLabel>Fraccionamientos</relationshipLabel>
    <relationshipName>Fraccionamientos</relationshipName>
    <type>Lookup</type>
</CustomField>