unpackaged/main/default/objects/Fraccionamiento__c/fields/Porcentaje_Incobrable_Postventa__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Incobrable_Postventa__c</fullName>
    <defaultValue>0.5</defaultValue>
    <label>% Incobrable Postventa</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>