unpackaged/main/default/objects/Fraccionamiento__c/fields/Programadora_de_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Programadora_de_Vivienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programadora de Vivienda</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fraccionamientos5</relationshipName>
    <type>Lookup</type>
</CustomField>