unpackaged/main/default/objects/Fraccionamiento__c/fields/Programadora_Inactiva__c.field-meta.xml
<CustomField>
    <fullName>Programadora_Inactiva__c</fullName>
    <formula>IF(  Programadora_de_Vivienda__r.IsActive == false, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programadora Inactiva</label>
    <type>Checkbox</type>
</CustomField>