unpackaged/main/default/objects/Fraccionamiento__c/fields/Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Prototipo__c</fullName>
    <label>Prototipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prototipo 1</fullName>
            </value>
            <value>
                <fullName>Prototipo 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>