unpackaged/main/default/objects/Fraccionamiento__c/fields/R1_Inactivo__c.field-meta.xml
<CustomField>
    <fullName>R1_Inactivo__c</fullName>
    <formula>IF(  Residente1__r.IsActive == false, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R1 Inactivo</label>
    <type>Checkbox</type>
</CustomField>