unpackaged/main/default/objects/Fraccionamiento__c/fields/Residente1__c.field-meta.xml
<CustomField>
    <fullName>Residente1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residente 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fraccionamientos</relationshipName>
    <type>Lookup</type>
</CustomField>