unpackaged/main/default/objects/Fraccionamiento__c/fields/Residente2__c.field-meta.xml
<CustomField>
    <fullName>Residente2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residente 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fraccionamientos1</relationshipName>
    <type>Lookup</type>
</CustomField>