unpackaged/main/default/objects/Fraccionamiento__c/fields/Residente3__c.field-meta.xml
<CustomField>
    <fullName>Residente3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residente 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fraccionamientos2</relationshipName>
    <type>Lookup</type>
</CustomField>