unpackaged/main/default/objects/Fraccionamiento__c/fields/Segmentacion__c.field-meta.xml
<CustomField>
    <fullName>Segmentacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segmentación de Fraccionamiento</label>
    <referenceTo>Segmento_de_Fraccionamiento__c</referenceTo>
    <relationshipLabel>Fraccionamientos</relationshipLabel>
    <relationshipName>Fraccionamientos</relationshipName>
    <type>Lookup</type>
</CustomField>