unpackaged/main/default/objects/Fraccionamiento__c/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residencial</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Interés Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>