unpackaged/main/default/objects/Fraccionamiento__c/fields/Sembrado__c.field-meta.xml
<CustomField>
    <fullName>Sembrado__c</fullName>
    <label>Sembrado</label>
    <type>TextArea</type>
</CustomField>