unpackaged/main/default/objects/Fraccionamiento__c/fields/Sin_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Sin_Vigencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sin Vigencia</label>
    <type>Checkbox</type>
</CustomField>