unpackaged/main/default/objects/Fraccionamiento__c/fields/Tiempode_visita__c.field-meta.xml
<CustomField>
    <fullName>Tiempode_visita__c</fullName>
    <label>Tiempo de visita</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>