unpackaged/main/default/objects/Fraccionamiento__c/fields/Tiempodeatencion__c.field-meta.xml
<CustomField>
    <fullName>Tiempodeatencion__c</fullName>
    <label>Tiempo de atención</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>