unpackaged/main/default/objects/Fraccionamiento__c/fields/Tiempodeatencion_garantias__c.field-meta.xml
<CustomField>
    <fullName>Tiempodeatencion_garantias__c</fullName>
    <label>Tiempo de atención garantías</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>