unpackaged/main/default/objects/Fraccionamiento__c/fields/Tipode_vivienda__c.field-meta.xml
<CustomField>
    <fullName>Tipode_vivienda__c</fullName>
    <label>Tipo de vivienda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residencial</fullName>
                <default>true</default>
                <label>Residencial</label>
            </value>
            <value>
                <fullName>Interés Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>