unpackaged/main/default/objects/Fraccionamiento__c/fields/Ubic_fracc__c.field-meta.xml
<CustomField>
    <fullName>Ubic_fracc__c</fullName>
    <label>Ubicación</label>
    <length>200</length>
    <type>Text</type>
</CustomField>