unpackaged/main/default/objects/Fraccionamiento__c/fields/Ubicacion_Compania__c.field-meta.xml
<CustomField>
    <fullName>Ubicacion_Compania__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ubicación Compañia</label>
    <referenceTo>Ubicacion__c</referenceTo>
    <relationshipLabel>Fraccionamientos</relationshipLabel>
    <relationshipName>Fraccionamientos</relationshipName>
    <type>Lookup</type>
</CustomField>