unpackaged/main/default/objects/Fraccionamiento__c/fields/UEN__c.field-meta.xml
<CustomField>
    <fullName>UEN__c</fullName>
    <label>UEN</label>
    <type>TextArea</type>
</CustomField>