unpackaged/main/default/objects/Fraccionamiento__c/fields/UEN_Sub_Aprobaciones__c.field-meta.xml
<CustomField>
    <fullName>UEN_Sub_Aprobaciones__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>UEN Sub Aprobaciones</label>
    <length>5</length>
    <type>Text</type>
</CustomField>