unpackaged/main/default/objects/Fraccionamiento__c/fields/Webfracc_frac__c.field-meta.xml
<CustomField>
    <fullName>Webfracc_frac__c</fullName>
    <label>Web Fraccionamiento</label>
    <type>Url</type>
</CustomField>