unpackaged/main/default/objects/Fraccionamiento__c/validationRules/Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields</fullName>
    <active>false</active>
    <errorConditionFormula>IF( OR(ISBLANK( Programadora_de_Vivienda__c ),ISBLANK( Jefe_Atencion_Clientes__c),ISBLANK( Residente1__c )) , true, false)</errorConditionFormula>
    <errorMessage>Se debe asignar un Jefe de ATC, una Programadora y Residente 1</errorMessage>
</ValidationRule>